Changed overflow-x style of the tabs to prevent scroll bar to appear on the tab (appears only on the page)

--- a/webpage/src/style.css
+++ b/webpage/src/style.css
@@ -208,7 +208,6 @@ li {
 
 .page {
 	width:100%;
-	height:100%;
 	display: grid; 
 	grid-template-columns: 5% 95%;
 	margin-bottom: 3%;
@@ -457,7 +456,7 @@ li {
 	padding-right:2%;
 	padding-left:2%;
 	background-color: #F7F7ED !important;
-	overflow-x: auto;
+	overflow-x: visible;
 }
 
 .react-tabs__tab {
